--- a/assets/css/module-css/banner.css
+++ b/assets/css/module-css/banner.css
@@ -4,7 +4,7 @@
 .banner-one {
   position: relative;
   display: block;
-  padding: 255px 0 0px;
+  padding: 210px 0 0px;
   background: linear-gradient(102.31deg, #F7F7FF 0%, #EDEEFF 51%, #F6F7FF 100%);
   overflow: hidden;
   z-index: 5;
@@ -214,7 +214,7 @@
 }
 
 .banner-one__img img {
-  width: auto;
+  width: 100%;
   animation: topBottom 3s ease-in-out infinite;
 }
 
