--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -882,7 +882,7 @@ ul {
 }
 
 .main-menu__contact-list li .text p {
-  font-size: 16px;
+  font-size: 12px;
   line-height: 16px;
   color: var(--Freshflow-white);
   font-weight: 500;
@@ -892,6 +892,7 @@ ul {
   color: var(--Freshflow-white);
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
+  font-size: 12px;
 }
 
 .main-menu__contact-list li .text p a:hover {
@@ -994,7 +995,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .main-menu__left {
@@ -1014,8 +1015,8 @@ ul {
   position: relative;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
+  /* flex-wrap: wrap; */
+  gap: 6px;
   padding: 25px 0;
 }
 
@@ -1176,7 +1177,7 @@ ul {
   .stricky-header .main-menu__list>li>ul>li>ul {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    /* display: flex; */
   }
 }
 
@@ -1189,7 +1190,7 @@ ul {
 
 .main-menu .main-menu__list>li+li,
 .stricky-header .main-menu__list>li+li {
-  margin-left: 35px;
+  margin-left: 24px;
 }
 
 .main-menu .main-menu__list>li>a,
